fix(styles): adjust opacity and z-index for lqip image when JavaScript is disabled (#12)

--- a/src/styles/lqip.css
+++ b/src/styles/lqip.css
@@ -28,3 +28,10 @@
   position: relative;
   overflow: hidden;
 }
+
+@media (scripting: none) {
+  [data-astro-lqip] {
+    --opacity: 0;
+    --z-index: 1;
+  }
+}
